<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/time_default"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <ImageView
                android:id="@+id/weather_image"
                android:src="@drawable/ic_sun_24dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/weather"/>

        <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

        <ImageView
                android:id="@+id/temp_image"
                android:src="@drawable/ic_thermometer_24dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/temperature"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/temp_text_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/temperature_default"/>

            <TextView
                    android:id="@+id/temp_text_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/temperature_default"/>


        </LinearLayout>

        <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

        <ImageView
                android:id="@+id/humi_image"
                android:src="@drawable/ic_humidity_24dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/humidity"/>

        <TextView
                android:id="@+id/humi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/humidity_default"/>

    </LinearLayout>

</LinearLayout>
