<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="12dp"
              android:orientation="vertical"
              android:background="#ffffff"
              tools:context=".view.fragment.SensorFragment">

    <ImageButton
            android:id="@+id/back_button"
            android:src="@drawable/ic_clear_black_24dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:background="#ffffff"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sensor_data"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"/>

    <ListView
            android:id="@+id/sensor_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
    >

        <Button
                android:id="@+id/sensor_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_sensor_button"/>

        <Button
                android:id="@+id/sensor_get_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_sensor_button"/>

    </LinearLayout>


</LinearLayout>
