<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#ffffff"
>

    <TextView
            android:id="@+id/sensor_time"
            android:text="@string/time_default"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"/>

            <ImageView
                    android:src="@drawable/ic_phone_android_black_24dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/phone_image"/>

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"/>

        </LinearLayout>

        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/x_axis"
                        android:textSize="18sp"/>

                <Space
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/text_acc_x"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/acc_unit"
                        android:textSize="18sp"/>

                <Space
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/text_mag_x"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/mag_unit"
                        android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/y_axis"
                        android:textSize="18sp"/>

                <Space
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/text_acc_y"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/acc_unit"
                        android:textSize="18sp"/>

                <Space
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/text_mag_y"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/mag_unit"
                        android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/z_axis"
                        android:textSize="18sp"/>

                <Space
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/text_acc_z"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/acc_unit"
                        android:textSize="18sp"/>

                <Space
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/text_mag_z"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/mag_unit"
                        android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
