<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#ffffff"
>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:gravity="center_horizontal">

        <LinearLayout
                android:id="@+id/memo_item"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:gravity="start|center_vertical">

            <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:textSize="12sp"
                    android:text="@string/memo_title"
                    android:lines="1"
                    android:gravity="start|center_vertical"/>

            <TextView
                    android:id="@+id/main_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:textSize="15sp"
                    android:text="@string/memo_main"
                    android:lines="2"
                    android:gravity="start|top"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="70sp"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"/>

            <ImageButton
                    android:id="@+id/edit_button"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@color/cardview_light_background"
                    android:contentDescription="@string/humidity"/>

            <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

            <ImageButton
                    android:id="@+id/delete_button"
                    android:src="@drawable/ic_delete_black_24dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="#ffffff"
                    android:contentDescription="@string/humidity"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
